@@ -18,8 +18,6 @@ import de.dytanic.cloudnet.lib.server.template.TemplateResource;
 import de.dytanic.cloudnet.lib.service.ServiceId;
 import de.dytanic.cloudnet.lib.service.plugin.ServerInstallablePlugin;
 import de.dytanic.cloudnet.lib.user.SimpledUser;
-import de.dytanic.cloudnet.lib.utility.Acceptable;
-import de.dytanic.cloudnet.lib.utility.CollectionWrapper;
 import de.dytanic.cloudnet.lib.utility.document.Document;
 import de.dytanic.cloudnetwrapper.CloudNetWrapper;
 import de.dytanic.cloudnetwrapper.network.packet.out.PacketOutAddServer;
@@ -43,6 +41,7 @@ import java.util.ArrayList;
 import java.util.Enumeration;
 import java.util.Objects;
 import java.util.Properties;
+import java.util.concurrent.TimeUnit;
 
 public class GameServer extends AbstractScreenService implements ServerDispatcher {
 
@@ -53,7 +52,8 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
     private ServerInfo serverInfo;
     private long startupTimeStamp = 0;
     private Path dir;
-    private String path, custom;
+    private String path;
+    private String custom;
 
     public GameServer(ServerProcess serverProcess, ServerStage serverStage, ServerGroup serverGroup) {
         this.serverProcess = serverProcess;
@@ -83,16 +83,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
 
     @Override
     public int hashCode() {
-        int result = serverProcess != null ? serverProcess.hashCode() : 0;
-        result = 31 * result + (serverStage != null ? serverStage.hashCode() : 0);
-        result = 31 * result + (serverGroup != null ? serverGroup.hashCode() : 0);
-        result = 31 * result + (instance != null ? instance.hashCode() : 0);
-        result = 31 * result + (serverInfo != null ? serverInfo.hashCode() : 0);
-        result = 31 * result + (int) (startupTimeStamp ^ (startupTimeStamp >>> 32));
-        result = 31 * result + (dir != null ? dir.hashCode() : 0);
-        result = 31 * result + (path != null ? path.hashCode() : 0);
-        result = 31 * result + (custom != null ? custom.hashCode() : 0);
-        return result;
+        return Objects.hash(serverProcess, serverStage, serverGroup, instance, serverInfo, startupTimeStamp, dir, path, custom);
     }
 
     @Override
@@ -104,19 +95,30 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
             return false;
         }
         final GameServer that = (GameServer) o;
-        return startupTimeStamp == that.startupTimeStamp && Objects.equals(serverProcess,
-                                                                           that.serverProcess) && serverStage == that.serverStage && Objects
-            .equals(serverGroup, that.serverGroup) && Objects.equals(instance, that.instance) && Objects.equals(serverInfo,
-                                                                                                                that.serverInfo) && Objects.equals(
-            dir,
-            that.dir) && Objects.equals(path, that.path) && Objects.equals(custom, that.custom);
+        return startupTimeStamp == that.startupTimeStamp &&
+            Objects.equals(serverProcess, that.serverProcess) &&
+            serverStage == that.serverStage &&
+            Objects.equals(serverGroup, that.serverGroup) &&
+            Objects.equals(instance, that.instance) &&
+            Objects.equals(serverInfo, that.serverInfo) &&
+            Objects.equals(dir, that.dir) &&
+            Objects.equals(path, that.path) &&
+            Objects.equals(custom, that.custom);
     }
 
     @Override
     public String toString() {
-        return '[' + serverProcess.getMeta().getServiceId().getServerId() + "/port=" + serverProcess.getMeta()
-                                                                                                    .getPort() + "/memory=" + serverProcess.getMeta()
-                                                                                                                                           .getMemory() + ']';
+        return "de.dytanic.cloudnetwrapper.server.GameServer{" +
+            "serverProcess=" + serverProcess +
+            ", serverStage=" + serverStage +
+            ", serverGroup=" + serverGroup +
+            ", instance=" + instance +
+            ", serverInfo=" + serverInfo +
+            ", startupTimeStamp=" + startupTimeStamp +
+            ", dir=" + dir +
+            ", path='" + path + '\'' +
+            ", custom='" + custom + '\'' +
+            "} " + super.toString();
     }
 
     public ServerInfo getServerInfo() {
@@ -166,7 +168,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
                         try {
                             URLConnection urlConnection = new java.net.URL(url.getUrl()).openConnection();
                             urlConnection.setRequestProperty("User-Agent",
-                                                             "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                                             NetworkUtils.USER_AGENT);
                             Files.copy(urlConnection.getInputStream(), Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"));
                         } catch (Exception ex) {
                             ex.printStackTrace();
@@ -191,7 +193,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
                                                                                .append("/cloudnet/api/v1/download")
                                                                                .substring(0)).openConnection();
                             urlConnection.setRequestProperty("User-Agent",
-                                                             "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                                             NetworkUtils.USER_AGENT);
 
                             SimpledUser simpledUser = CloudNetWrapper.getInstance().getSimpledUser();
                             urlConnection.setRequestProperty("-Xcloudnet-user", simpledUser.getUserName());
@@ -221,7 +223,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
                         try {
                             URLConnection urlConnection = new java.net.URL(url.getUrl()).openConnection();
                             urlConnection.setRequestProperty("User-Agent",
-                                                             "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                                             NetworkUtils.USER_AGENT);
                             Files.copy(urlConnection.getInputStream(), Paths.get("local/cache/web_plugins/" + url.getName() + ".jar"));
                         } catch (Exception ex) {
                             ex.printStackTrace();
@@ -246,7 +248,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
                                                                                .append("/cloudnet/api/v1/download")
                                                                                .substring(0)).openConnection();
                             urlConnection.setRequestProperty("User-Agent",
-                                                             "Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/537.11 (KHTML, like Gecko) Chrome/23.0.1271.95 Safari/537.11");
+                                                             NetworkUtils.USER_AGENT);
 
                             SimpledUser simpledUser = CloudNetWrapper.getInstance().getSimpledUser();
                             urlConnection.setRequestProperty("-Xcloudnet-user", simpledUser.getUserName());
@@ -429,7 +431,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
 
         CloudNetWrapper.getInstance().getNetworkConnection().sendPacket(new PacketOutAddServer(this.serverInfo,
                                                                                                this.serverProcess.getMeta()));
-        System.out.println("Server " + toString() + " started in [" + (System.currentTimeMillis() - startupTime) + " milliseconds]");
+        System.out.println("Server " + this + " started in [" + (System.currentTimeMillis() - startupTime) + " milliseconds]");
         this.startupTimeStamp = System.currentTimeMillis();
 
         startProcess();
@@ -459,14 +461,13 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
 
         if (CloudNetWrapper.getInstance().getWrapperConfig().isSavingRecords()) {
             try {
-                File directory = new File("local/records/" + serverProcess.getMeta().getServiceId().toString());
+                File directory = new File("local/records/" + serverProcess.getMeta().getServiceId());
 
                 FileUtility.copyFilesInDirectory(new File(path + "/logs"), directory);
                 FileUtility.copyFilesInDirectory(new File(path + "/crash-reports"), directory);
 
                 new Document("meta", serverProcess.getMeta()).saveAsConfig(Paths.get("local/records/" + serverProcess.getMeta()
-                                                                                                                     .getServiceId()
-                                                                                                                     .toString() + "/metadata.json"));
+                                                                                                                     .getServiceId() + "/metadata.json"));
             } catch (IOException ignored) {
             }
         }
@@ -489,7 +490,7 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
 
         CloudNetWrapper.getInstance().getServers().remove(getServiceId().getServerId());
         CloudNetWrapper.getInstance().getNetworkConnection().sendPacket(new PacketOutRemoveServer(serverInfo));
-        System.out.println("Server " + toString() + " was stopped");
+        System.out.println("Server " + this + " was stopped");
         return true;
     }
 
@@ -499,17 +500,20 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
     public void kill() {
         if (instance.isAlive()) {
             executeCommand("stop");
-            NetworkUtils.sleepUninterruptedly(500);
+            try {
+                instance.waitFor(60, TimeUnit.SECONDS);
+            } catch (InterruptedException e) {
+                e.printStackTrace();
+                instance.destroyForcibly();
+            }
         }
-
-        instance.destroyForcibly();
     }
 
     /**
      * Copy the template to the temporary folder
      */
     public void copy() {
-        copy(null);
+        copy(this.serverInfo.getTemplate());
     }
 
     @Override
@@ -525,12 +529,12 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
     /**
      * Copy the template to the temporary folder
      *
-     * @param template The template with information's
+     * @param template The template with information
      */
     public void copy(Template template) {
 
-        if (template == null) {
-            template = this.serverProcess.getMeta().getTemplate();
+        if (!serverGroup.getTemplates().contains(template)) {
+            return;
         }
 
         if (instance != null && instance.isAlive()) {
@@ -538,47 +542,20 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
             try {
                 Thread.sleep(1000);
             } catch (InterruptedException e) {
+                e.printStackTrace();
             }
         }
 
-        Template x = CollectionWrapper.filter(serverGroup.getTemplates(), new Acceptable<Template>() {
-            @Override
-            public boolean isAccepted(Template template) {
-                return template != null && serverProcess.getMeta().getTemplate().getName().equals(template.getName());
-            }
-        });
-        if (custom != null) {
-            MasterTemplateDeploy masterTemplateDeploy = new MasterTemplateDeploy(path,
-                                                                                 new ConnectableAddress(CloudNetWrapper.getInstance()
-                                                                                                                       .getWrapperConfig()
-                                                                                                                       .getCloudnetHost(),
-                                                                                                        CloudNetWrapper.getInstance()
-                                                                                                                       .getWrapperConfig()
-                                                                                                                       .getWebPort()),
-                                                                                 CloudNetWrapper.getInstance().getSimpledUser(),
-                                                                                 CloudNetWrapper.getInstance().getOptionSet().has("ssl"),
-                                                                                 template,
-                                                                                 serverGroup.getName(),
-                                                                                 custom);
-            try {
-                masterTemplateDeploy.deploy();
-            } catch (Exception e) {
-                e.printStackTrace();
-            }
-        } else if (x != null && x.getBackend().equals(TemplateResource.MASTER)) {
-            MasterTemplateDeploy masterTemplateDeploy = new MasterTemplateDeploy(path,
-                                                                                 new ConnectableAddress(CloudNetWrapper.getInstance()
-                                                                                                                       .getWrapperConfig()
-                                                                                                                       .getCloudnetHost(),
-                                                                                                        CloudNetWrapper.getInstance()
-                                                                                                                       .getWrapperConfig()
-                                                                                                                       .getWebPort()),
-                                                                                 CloudNetWrapper.getInstance().getSimpledUser(),
-                                                                                 CloudNetWrapper.getInstance().getOptionSet().has("ssl"),
-                                                                                 template,
-                                                                                 serverGroup.getName(),
-                                                                                 custom);
-
+        if (custom != null || (template != null && template.getBackend().equals(TemplateResource.MASTER))) {
+            MasterTemplateDeploy masterTemplateDeploy =
+                new MasterTemplateDeploy(path,
+                                         new ConnectableAddress(CloudNetWrapper.getInstance().getWrapperConfig().getCloudnetHost(),
+                                                                CloudNetWrapper.getInstance().getWrapperConfig().getWebPort()),
+                                         CloudNetWrapper.getInstance().getSimpledUser(),
+                                         CloudNetWrapper.getInstance().getOptionSet().has("ssl"),
+                                         template,
+                                         serverGroup.getName(),
+                                         custom);
             try {
                 masterTemplateDeploy.deploy();
             } catch (Exception e) {
@@ -593,10 +570,8 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
                 FileUtility.deleteDirectory(new File("local/templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + serverProcess.getMeta()
                                                                                                                                            .getTemplate()
                                                                                                                                            .getName() + "/CLOUD"));
-                new File("local/templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + serverProcess.getMeta()
-                                                                                                               .getTemplate()
-                                                                                                               .getName() + "/plugins/CloudNetAPI.jar")
-                    .delete();
+                Files.deleteIfExists(Paths.get("local", "templates", serverGroup.getName(), serverProcess.getMeta().getTemplate().getName(),
+                                               "plugins", "CloudNetAPI.jar"));
             } catch (Exception e) {
             }
 
@@ -617,20 +592,17 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
         {
             Template template = this.serverGroup.getGlobalTemplate();
             if (custom != null) {
-                MasterTemplateLoader templateLoader = new MasterTemplateLoader((CloudNetWrapper.getInstance()
-                                                                                               .getOptionSet()
-                                                                                               .has("ssl") ? "https://" : "http://") + CloudNetWrapper
-                    .getInstance()
-                    .getWrapperConfig()
-                    .getCloudnetHost() + ':' + CloudNetWrapper.getInstance().getWrapperConfig().getWebPort() + "/cloudnet/api/v1/download",
-                                                                               dir.toString() + "/template.zip",
-                                                                               CloudNetWrapper.getInstance().getSimpledUser(),
-                                                                               template,
-                                                                               serverGroup.getName(),
-                                                                               custom);
-                System.out.println("Downloading template for " + this.serverProcess.getMeta()
-                                                                                   .getServiceId()
-                                                                                   .getGroup() + ' ' + template.getName());
+                MasterTemplateLoader templateLoader = new MasterTemplateLoader(
+                    (CloudNetWrapper.getInstance().getOptionSet().has("ssl") ? "https://" : "http://") +
+                        CloudNetWrapper.getInstance().getWrapperConfig().getCloudnetHost() +
+                        ':' + CloudNetWrapper.getInstance().getWrapperConfig().getWebPort() + "/cloudnet/api/v1/download",
+                    dir + "/template.zip",
+                    CloudNetWrapper.getInstance().getSimpledUser(),
+                    template,
+                    serverGroup.getName(),
+                    custom);
+                System.out.println("Downloading template for " +
+                                       this.serverProcess.getMeta().getServiceId().getGroup() + ' ' + template.getName());
                 templateLoader.load();
                 templateLoader.unZip(dir.toString());
                 FileUtility.copyFilesInDirectory(new File(dir.toString()), new File(path));
@@ -641,10 +613,8 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
             } else if (template.getBackend().equals(TemplateResource.MASTER) && CloudNetWrapper.getInstance().getSimpledUser() != null) {
                 downloadTemplate(template);
                 return true;
-            } else if (Files.exists(Paths.get("local/templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + template.getName()))) {
-
-                FileUtility.copyFilesInDirectory(new File("local/templates/" + serverGroup.getName() + NetworkUtils.SLASH_STRING + template.getName()),
-                                                 new File(path));
+            } else if (Files.exists(Paths.get("local", "templates", serverGroup.getName(), template.getName()))) {
+                FileUtility.copyFilesInDirectory(new File("local/templates/" + serverGroup.getName(), template.getName()), new File(path));
             }
         }
 
@@ -707,9 +677,8 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
         }
 
         commandBuilder.append(
-            "-XX:+UseG1GC -XX:MaxGCPauseMillis=50 -XX:MaxPermSize=256M -XX:-UseAdaptiveSizePolicy -XX:CompileThreshold=100 -Dcom.mojang.eula.agree=true -Dio.netty.recycler.maxCapacity=0 -Dio.netty.recycler.maxCapacity.default=0 -Djline.terminal=jline.UnsupportedTerminal -Xmx" + serverProcess
-                .getMeta()
-                .getMemory() + "M -jar ");
+            "-Dfile.encoding=UTF-8 -Dcom.mojang.eula.agree=true -Djline.terminal=jline.UnsupportedTerminal -Xmx"
+                + serverProcess.getMeta().getMemory() + "M -jar ");
 
         switch (serverGroup.getServerType()) {
             case CAULDRON:
@@ -793,11 +762,11 @@ public class GameServer extends AbstractScreenService implements ServerDispatche
     public void restart() {
 
         kill();
-        System.out.println("Server " + toString() + " was killed and restart...");
+        System.out.println("Server " + this + " was killed and restart...");
         try {
             startProcess();
             startupTimeStamp = System.currentTimeMillis();
-            System.out.println("Server " + toString() + " restarted now!");
+            System.out.println("Server " + this + " restarted now!");
         } catch (Exception e) {
             e.printStackTrace();
         }
